package com.ecms.repository;

public interface LabOrderRepository {
}
