@startuml UC31_IssueLabImagingOrder_ClassDiagram

skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam backgroundColor white
skinparam roundcorner 5
skinparam class {
    BackgroundColor #f9f9f9
    ArrowColor #336699
    BorderColor #336699
}

class LabOrderController {
    + createLabOrder(request: LabOrderRequest): ResponseEntity<ApiResponse<LabOrderResponse>>
}

interface LabOrderService {
    + createLabOrder(request: LabOrderRequest, doctorId: Long): LabOrderResponse
}

class LabOrderServiceImpl {
    + createLabOrder(request: LabOrderRequest, doctorId: Long): LabOrderResponse
}

class AppointmentRepository {
    + findById(id: Long): Appointment
}

class LabOrderRepository {
    + save(order: LabOrder): LabOrder
}

class Appointment {
    - appointmentId: Long
    - status: AppointmentStatus
}

class LabOrder {
    - orderId: Long
    - status: LabOrderStatus
    - orderTime: LocalDateTime
    - testTypes: List<String>
    - notes: String
}

enum LabOrderStatus {
    PENDING
    IN_PROGRESS
    COMPLETED
    CANCELLED
}

class Patient {
    - patientId: Long
    - fullName: String
}

class Doctor {
    - doctorId: Long
    - fullName: String
}

class LabOrderRequest {
    - appointmentId: Long
    - testTypes: List<String>
    - notes: String
}

class LabOrderResponse {
    - orderId: Long
    - status: String
    - orderTime: LocalDateTime
}

class ApiResponse<T> {
    - status: int
    - message: String
    - data: T
}

LabOrderController ..> LabOrderService : uses
LabOrderController ..> ApiResponse : creates
LabOrderService <|.. LabOrderServiceImpl : implements
LabOrderServiceImpl ..> AppointmentRepository : uses
LabOrderServiceImpl ..> LabOrderRepository : uses
LabOrderServiceImpl ..> LabOrderRequest : consumes
LabOrderServiceImpl ..> LabOrderResponse : creates

AppointmentRepository ..> Appointment : manages
LabOrderRepository ..> LabOrder : manages
LabOrder "1" -- "1" LabOrderStatus : uses >

LabOrder "0..*" o-- "1" Patient : orders for >
LabOrder "0..*" o-- "1" Doctor : ordered by >
LabOrder "0..*" o-- "1" Appointment : linked to >

@enduml
